--- a/components/_index.scss
+++ b/components/_index.scss
@@ -1,8 +1,1 @@
-@forward './list';
-@forward './button';
-@forward './title';
-@forward './contact';
-@forward './hotline';
-@forward './gallery';
-@forward './block';
-@forward './embed';
+// @forward './title';
