--- a/abstracts/_functions.scss
+++ b/abstracts/_functions.scss
@@ -1,7 +1,7 @@
 @use "sass:math";
-/*====================
-  Abstracts - functions
-====================*/
+// ==================================
+//  Abstracts - Functions
+// ==================================
 
 // Devided values
 @function d($number) {
