--- a/abstracts/_vars.scss
+++ b/abstracts/_vars.scss
@@ -1,6 +1,6 @@
-/*====================
-  Abstracts - variables
-====================*/
+// ==================================
+// Abstracts - Variables
+// ==================================
 
 // #region - Breakpoints
 $sp-breakpoint: 767px;
