--- a/layouts/_footer.scss
+++ b/layouts/_footer.scss
@@ -1,7 +1,7 @@
 @use "../abstracts/" as *;
 
-/*====================
-  Layouts - Footer
-====================*/
+// ==================================
+// Layouts - Footer
+// ==================================
 .c-footer {}
 // #endregion
