--- a/layouts/_header.scss
+++ b/layouts/_header.scss
@@ -1,8 +1,8 @@
 @use '../abstracts/' as *;
 
-/*====================
-  Layouts - Header
-====================*/
+// ==================================
+// Layouts - Header
+// ==================================
 // #region - Header
 .c-header {}
 // #endregion
