--- a/pages/_top.scss
+++ b/pages/_top.scss
@@ -1,8 +1,8 @@
 @use '../abstracts/' as *;
 
-/*====================
-  Pages - Top
-====================*/
+// ==================================
+// Pages - Top
+// ==================================
 // #region - Top
 .top {}
 // #endregion
