--- a/utilities/_limit-lines.scss
+++ b/utilities/_limit-lines.scss
@@ -1,8 +1,8 @@
 @use "../abstracts/index" as *;
 
-/*====================
-  Utilities - Placeholder via <data>
-====================*/
+// ==================================
+// Utilities - Placeholder via <data>
+// ==================================
 
 $line-clamps: (1);
 $sp-line-clamps: (1);
