--- a/utilities/_text.scss
+++ b/utilities/_text.scss
@@ -1,8 +1,8 @@
 @use "../abstracts/index" as *;
 
-/*====================
-  Utilities - Text
-====================*/
+// ==================================
+// Utilities - Text
+// ==================================
 @each $font-name, $font-value in $fonts {
   .font-#{$font-name} {
     font-family: $font-value;
