--- a/abstracts/_keyframes.scss
+++ b/abstracts/_keyframes.scss
@@ -1,3 +1,3 @@
-/*====================
-  Abstracts - keyframes
-====================*/
+// ==================================
+// Abstracts - keyframes
+// ==================================
