--- a/layouts/_layout.scss
+++ b/layouts/_layout.scss
@@ -1,8 +1,8 @@
 @use '../abstracts/' as *;
 
-/*====================
-  Layout
-====================*/
+// ==================================
+// Layout
+// ==================================
 $containers: (
   base: (
     width: 1160px
