--- a/utilities/_breakpoint.scss
+++ b/utilities/_breakpoint.scss
@@ -1,5 +1,7 @@
 @use "../abstracts/index" as *;
-
+// ==================================
+//  Utilities - Breakpoints
+// ==================================
 // None
 $display-none-utils: (
   ".tab-none": (
